--- a/src/assets/colors.scss
+++ b/src/assets/colors.scss
@@ -2,6 +2,7 @@
 // https://m2.material.io/design/color/dark-theme.html
 
 :root {
+  --primary: #50c878;
   --success: #50c878;
   --text: #ffffff;
   --border: #f3f4f6;
